2008-03-05  Thomas Mills HInkle  <tmhinkle@gmail.com>

	* src/lib/gsudoku.py (number_changed_cb): Fix bug that led to game
	not being registered as solved after user had used "clear"
	button. Patch from Greg Fawcett to bug #423478

2008-03-01  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/gsudoku.py: Fix crash when starting new game. 
	Patch by my in bug #513894.

2008-02-12  Thomas Hinkle  <tmhinkle@gmail.com>

	* src/lib/gsudoku.py (GridDancer): Make grid un-focus-able while
	dancing, so that user can't do things like erase numbers and win
	again (this led to seriously weird, seizure-inducing behavior when
	two dancing routines got triggered simultaneously)

2008-02-10  Thomas Hinkle  <tmhinkle@gmail.com>

	* src/lib/saver.py (SudokuTracker.finish_jar): Fix regression from
	last commit (stupid typo).
	* src/lib/printing.py (SudokuPrinter.__init__): Define self.drawn
	right away (should fix bug #488636).

2008-02-10  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/sudoku_generator_gui.py:
	* src/lib/main.py: Make dialogs transient (bug #510911).


2008-02-09  Thomas Hinkle  <tmhinkle@gmail.com>

	* src/lib/saver.py (SudokuTracker.save_game): Display dialog
	warning user if unable to save. bug #486385
	(SudokuTracker.finish_jar): Display dialog warning user if unable
	to save. bug #486385
	(SudokuTracker.__init__): Display dialog warning user if unable to
	create directories for saved and finished files
	* src/lib/dialog_swallower.py (SwappableArea.run_dialog): Queue
	redraw when we switch back to main page. This fixes the annoying
	display bug that made numbers render badly when you started up
	gnome sudoku.
	* src/lib/main.py (UI.print_multiple_games): Fix bug #515411 -
	GamePrinter expected an instance of SudokuMaker, not SudokuTracker
	(UI.__init__): Add run_selector keyword arg to allow us to turn
	off selector dialog for testing purposes.
	* src/lib/gsudoku.py (SudokuGameDisplay.add_value): Clean up and
	comment function.